tests/hook_syntax_compatibility_includes/hook_syntax_compatibility_includes.exp
Error ----------------------------------------------------------------------------------- __tests__/excluded-test.js:5:5

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   __tests__/excluded-test.js:5:5
   5|     IP.useFoo(); // error
          ^^^^^^^^^^^

References:
   __tests__/excluded-test.js:5:5
   5|     IP.useFoo(); // error
          ^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- __tests__/excluded-test.js:7:5

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   __tests__/excluded-test.js:7:5
   7|     XP.useFoo(); // error
          ^^^^^^^^^^^

References:
   __tests__/excluded-test.js:7:5
   7|     XP.useFoo(); // error
          ^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------- __tests__/excluded-test.js:15:5

Cannot call function because callee [1] has a name that indicates it is a React hook (starting with `use`) but it is
defined as a non-hook function. [react-rule-hook]

   __tests__/excluded-test.js:15:5
   15|     XP.useBar(); // error
           ^^^^^^^^^^^

References:
   __tests__/excluded-test.js:15:5
   15|     XP.useBar(); // error
           ^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- exclude.js:5:5

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   exclude.js:5:5
   5|     IP.useFoo(); // error
          ^^^^^^^^^^^

References:
   exclude.js:5:5
   5|     IP.useFoo(); // error
          ^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- exclude.js:7:5

Cannot call hook [1] because React hooks can only be called within components or hooks. [react-rule-hook]

   exclude.js:7:5
   7|     XP.useFoo(); // error
          ^^^^^^^^^^^

References:
   exclude.js:7:5
   7|     XP.useFoo(); // error
          ^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- exclude.js:15:5

Cannot call function because callee [1] has a name that indicates it is a React hook (starting with `use`) but it is
defined as a non-hook function. [react-rule-hook]

   exclude.js:15:5
   15|     XP.useBar(); // error
           ^^^^^^^^^^^

References:
   exclude.js:15:5
   15|     XP.useBar(); // error
           ^^^^^^^^^ [1]



Found 6 errors
